Sectors CRUD almost done